--- a/package.json
+++ b/package.json
@@ -34,9 +34,14 @@
     "echarts": "^4.1.0",
     "element-ui": "^2.4.1",
     "express": "^4.16.3",
+    "highlight.js": "^9.13.1",
+    "marked": "^0.5.1",
+    "mavon-editor": "^2.6.17",
     "nuxt": "^1.0.0",
+    "nuxt-sass-resources-loader": "^2.0.5",
     "source-map-support": "^0.5.6",
-    "vue-cookie": "^1.1.4"
+    "vue-cookie": "^1.1.4",
+    "vue-quill-editor": "^3.0.6"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
