--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-vue": "^4.0.0",
     "nodemon": "^1.11.0",
     "prettier": "1.14.3",
+    "three": "^0.98.0",
     "vue-lazyload": "^1.2.6"
   }
 }
